Deprecated method removed